# auto-dashboards

./: README.md  package.json  pyproject.toml
auto_dashboards/: dash_runner.py  process_manager.py
