[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.2,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "auto-dashboards"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jupyter_server>=2.4.0,<3",
    "jupyter-server-proxy",
    "nbformat",
    "openai"
]
dynamic = ["version", "description", "authors", "keywords"]

[project.urls]
Homepage = "https://github.com/orbrx/auto-dashboards"
Repository = "https://github.com/orbrx/auto-dashboards"
"Bug Tracker" = "https://github.com/orbrx/auto-dashboards/issues"
Changelog = "https://github.com/orbrx/auto-dashboards/releases"
"Extension Marketplace" = "https://marketplace.orbrx.io/extensions/auto-dashboards"

[project.optional-dependencies]
streamlit = ["streamlit"]
solara = ["solara"]
dash = ["dash"]
all = [
    "streamlit",
    "solara",
    "dash"
]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.6.0"
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["auto_dashboards/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"auto_dashboards/labextension" = "share/jupyter/labextensions/@orbrx/auto-dashboards"
"install.json" = "share/jupyter/labextensions/@orbrx/auto-dashboards/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "auto_dashboards/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "auto_dashboards/labextension/static/style.js",
    "auto_dashboards/labextension/package.json",
]
skip-if-exists = ["auto_dashboards/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "auto_dashboards/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.2.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.check-manifest]
ignore = ["auto_dashboards/labextension/**", "yarn.lock", ".*", "package-lock.json"]
